pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
   app: redis-pods
spec:
  containers:
  - name: redis
    image: redis:7
    ports:
    - containerPort: 80
