svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: clusterIp
  selector:
    app: nginx 
  ports:
    - port: 80
      targetPort: 80
