svc-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-1
spec:
  type: NodePort
  selecor:
    app: redis-pods
  ports:
    - port: 80
      targetPort: 80
      nodePort: 6379
