NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      backend: true
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          frontend: true
    ports:
    - port: 80
